# chess-v2

./: README.md  bot.py  pyproject.toml  test_bot.py
chess_ai/: __init__.py  cli.py  engine.py  llm.py  training.py
data/: games.pgn
tests/: test_chess_ai.py
